working linear part

--- a/Lab2/assignment_lab02.ipynb
+++ b/Lab2/assignment_lab02.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define the heplper functions\n",
+    "## Define the helper functions\n",
     "\n",
     "In this section you will find some helper functions (some already implemented, some to be implemented by you) that will be used in the following sections.\n",
     "1. `load_dataset` -> to load the dataset from the file `data/lux.npz`,\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,13 +171,19 @@
     "        x = x[idx]\n",
     "        y = y[idx]\n",
     "\n",
-    "    # Split the dataset in k folds\n",
-    "    # ADD YOUR CODE HERE"
+    "    # Splitting the dataset: to split in near equal datasets I put in first subset the values with indexes 0, k, 2k, ...\n",
+    "    # and so on, int the second 1, k+1, 2k+1,...,  so the sets have the same size or one value less\n",
+    "    \n",
+    "    x_folds = [x[i::k] for i in range(k)]\n",
+    "    y_folds = [y[i::k] for i in range(k)]\n",
+    "    \n",
+    "    return x_folds, y_folds\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,17 +194,36 @@
     "\n",
     "    # Build a list containing all of the possible combination of parameters\n",
     "    params = list(itertools.product(*parameters.values()))\n",
-    "\n",
     "    # Initialize the dictionary of results\n",
     "    results = {k: 0 for k in params}\n",
     "\n",
     "    # For each param combination, perform the SVM training and testing\n",
     "    for param in params:\n",
     "        param = dict(zip(parameters.keys(), param))\n",
-    "\n",
+    "        print(param)\n",
     "        fold_accuracies = []\n",
+    "        model.set_params(**param)\n",
     "        \n",
-    "        # ADD YOUR CODE HERE\n",
+    "        \n",
+    "        #For all k_folds        \n",
+    "        for i in range(k):\n",
+    "            #Take the i-th set as the validation test one \n",
+    "            x_valid_test = x_folds[i]\n",
+    "            y_valid_test = y_folds[i]\n",
+    "            \n",
+    "            #The remaining ones create the validation training set (otherwise there is a conflict with the variable names)\n",
+    "            x_valid_train = np.vstack(np.delete(x_folds, i, axis=0))\n",
+    "            y_valid_train = np.delete(y_folds, i, axis=0).flatten()\n",
+    "            \n",
+    "            \n",
+    "            #Train the model on the training set\n",
+    "            model.fit(x_valid_train, y_valid_train)\n",
+    "            \n",
+    "            #Get the accuracy on this set\n",
+    "            predictions = model.predict(x_valid_test)\n",
+    "            right_classified = (predictions == y_valid_test).sum()\n",
+    "            \n",
+    "            fold_accuracies.append(right_classified/y_valid_test.shape[0])\n",
     "\n",
     "        # Compute the mean accuracy\n",
     "        results[tuple(param.values())] = round(np.mean(fold_accuracies), 4)\n",
@@ -234,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -337,21 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6882/31676135.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/tmp/ipykernel_4039/31676135.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  cmap = plt.cm.get_cmap('Accent', 4)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ece094582e6d4f0f9539ca37918c7741",
+       "model_id": "3bc95545bb844a32b6ae3781fe21ee52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,41 +415,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb Cell 24\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X32sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m svm \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m# ADD YOUR CODE HERE (replace None)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X32sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Perform the K-fold cross validation\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X32sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m best, results \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m# ADD YOUR CODE HERE (replace None)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X32sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mRESULTS FOR LINEAR KERNEL\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X32sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBest parameter set found:\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 0.01}\n",
+      "{'C': 0.1}\n",
+      "{'C': 1}\n",
+      "{'C': 10}\n",
+      "RESULTS FOR LINEAR KERNEL\n",
+      "Best parameter set found: {'C': 10}\n",
+      "Score with best parameter: 0.897\n",
+      "All scores on the grid: [({'C': 0.01}, 0.745), ({'C': 0.1}, 0.874), ({'C': 1}, 0.891), ({'C': 10}, 0.897)]\n"
      ]
     }
    ],
    "source": [
-    "# Parameters for linear SVM\n",
+    "#Parameters for linear SVM\n",
     "parameters = {'C': [ 0.01, 0.1, 1, 10]}\n",
     "\n",
     "# Define the model (without parameters)\n",
-    "svm = None # ADD YOUR CODE HERE (replace None)\n",
+    "svm = SVC(kernel='linear')\n",
     "\n",
     "# Perform the K-fold cross validation\n",
-    "best, results = None # ADD YOUR CODE HERE (replace None)\n",
+    "best, results = k_fold_cross_validation(X_train, y_train, 4, svm, parameters)\n",
     "\n",
     "print ('RESULTS FOR LINEAR KERNEL')\n",
     "\n",
-    "print(\"Best parameter set found:\")\n",
-    "# ADD YOUR CODE HERE\n",
+    "print(\"Best parameter set found:\", best[0])\n",
     "\n",
-    "print(\"Score with best parameter:\")\n",
-    "# ADD YOUR CODE HERE\n",
-    "print()\n",
-    "print(\"All scores on the grid:\")\n",
-    "# ADD YOUR CODE HERE"
+    "print(\"Score with best parameter:\", best[1])\n",
+    "\n",
+    "print(\"All scores on the grid:\", results)"
    ]
   },
   {
@@ -438,29 +463,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 447,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 0.01, 'gamma': 0.01}\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (9,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb Cell 26\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m svm \u001b[39m=\u001b[39m SVC(kernel\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlinear\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Perform the K-fold cross validation\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m best, results \u001b[39m=\u001b[39m k_fold_cross_validation(X_train, y_train, \u001b[39m9\u001b[39;49m, svm, parameters)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mRESULTS FOR POLY DEGREE=2 KERNEL\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBest parameter set found:\u001b[39m\u001b[39m\"\u001b[39m, best[\u001b[39m0\u001b[39m])\n",
+      "\u001b[1;32m/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb Cell 26\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m y_valid_test \u001b[39m=\u001b[39m y_folds[i]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m#The remaining ones create the validation training set (otherwise there is a conflict with the variable names)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m x_valid_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mvstack(np\u001b[39m.\u001b[39;49mdelete(x_folds, i, axis\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m y_valid_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdelete(y_folds, i, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mflatten()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m#Train the model on the training set\u001b[39;00m\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mdelete\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/lib/function_base.py:5126\u001b[0m, in \u001b[0;36mdelete\u001b[0;34m(arr, obj, axis)\u001b[0m\n\u001b[1;32m   5123\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[1;32m   5124\u001b[0m         \u001b[39mpass\u001b[39;00m\n\u001b[0;32m-> 5126\u001b[0m arr \u001b[39m=\u001b[39m asarray(arr)\n\u001b[1;32m   5127\u001b[0m ndim \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mndim\n\u001b[1;32m   5128\u001b[0m arrorder \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mF\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m arr\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mfnc \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (9,) + inhomogeneous part."
+     ]
+    }
+   ],
    "source": [
     "# Parameters for linear SVM\n",
     "parameters = {'C': [0.01, 0.1, 1],'gamma':[0.01,0.1,1.]}\n",
     "\n",
     "# Define an SVM with poly of degree 2 kernel (without parameters)\n",
-    "poly2_svm = None # ADD YOUR CODE HERE (replace None)\n",
+    "poly2_svm = SVC(kernel='poly', degree= 3)\n",
     "\n",
     "# Perform the K-fold cross validation\n",
-    "best, results = None # ADD YOUR CODE HERE (replace None)\n",
+    "svm = SVC(kernel='linear')\n",
+    "\n",
+    "# Perform the K-fold cross validation\n",
+    "best, results = k_fold_cross_validation(X_train, y_train, 9, svm, parameters)\n",
     "\n",
     "print ('RESULTS FOR POLY DEGREE=2 KERNEL')\n",
     "\n",
-    "print(\"Best parameter set found:\")\n",
-    "# ADD YOUR CODE HERE\n",
+    "print(\"Best parameter set found:\", best[0])\n",
     "\n",
-    "print(\"Score with best parameter:\")\n",
-    "# ADD YOUR CODE HERE\n",
-    "print()\n",
-    "print(\"All scores on the grid:\")\n",
-    "# ADD YOUR CODE HERE"
+    "print(\"Score with best parameter:\", best[1])\n",
+    "\n",
+    "print(\"All scores on the grid:\", results)\n",
+    "\n",
+    "#Change how the x_valid_train is flattened "
    ]
   },
   {
