working SVM part

--- a/Lab2/assignment_lab02.ipynb
+++ b/Lab2/assignment_lab02.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,11 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to perform the k-fold cross validation\n",
+    "\n",
     "def k_fold_cross_validation(x_train: np.ndarray, y_train: np.ndarray, k: int, model: SVC, parameters: dict) -> tuple[tuple, tuple]:\n",
     "    # Define the folds for the cross validation\n",
     "    x_folds, y_folds = k_split(x_train, y_train, k)\n",
@@ -199,8 +200,8 @@
     "\n",
     "    # For each param combination, perform the SVM training and testing\n",
     "    for param in params:\n",
-    "        param = dict(zip(parameters.keys(), param))\n",
-    "        print(param)\n",
+    "        param = dict(zip(parameters.keys(), param)) \n",
+    "        \n",
     "        fold_accuracies = []\n",
     "        model.set_params(**param)\n",
     "        \n",
@@ -212,8 +213,12 @@
     "            y_valid_test = y_folds[i]\n",
     "            \n",
     "            #The remaining ones create the validation training set (otherwise there is a conflict with the variable names)\n",
-    "            x_valid_train = np.vstack(np.delete(x_folds, i, axis=0))\n",
-    "            y_valid_train = np.delete(y_folds, i, axis=0).flatten()\n",
+    "            \n",
+    "            x_valid_train = x_folds[:i] + x_folds[i+1:]         #Get all the folds except for the i-th one\n",
+    "            x_valid_train = np.concatenate(x_valid_train[:])    #Concatenate them to get a unique set\n",
+    "            \n",
+    "            y_valid_train = y_folds[:i] + y_folds[i+1:]\n",
+    "            y_valid_train = np.concatenate(y_valid_train[:]) \n",
     "            \n",
     "            \n",
     "            #Train the model on the training set\n",
@@ -259,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -362,21 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4039/31676135.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/tmp/ipykernel_5326/31676135.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  cmap = plt.cm.get_cmap('Accent', 4)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bc95545bb844a32b6ae3781fe21ee52",
+       "model_id": "4d42df65b5364b5abd4c68413803e978",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,21 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 0.01}\n",
-      "{'C': 0.1}\n",
-      "{'C': 1}\n",
-      "{'C': 10}\n",
       "RESULTS FOR LINEAR KERNEL\n",
       "Best parameter set found: {'C': 10}\n",
-      "Score with best parameter: 0.897\n",
-      "All scores on the grid: [({'C': 0.01}, 0.745), ({'C': 0.1}, 0.874), ({'C': 1}, 0.891), ({'C': 10}, 0.897)]\n"
+      "Score with best parameter: 0.899\n",
+      "All scores on the grid: [({'C': 0.01}, 0.745), ({'C': 0.1}, 0.875), ({'C': 1}, 0.896), ({'C': 10}, 0.899)]\n"
      ]
     }
    ],
@@ -463,28 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 0.01, 'gamma': 0.01}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (9,) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb Cell 26\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m svm \u001b[39m=\u001b[39m SVC(kernel\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlinear\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Perform the K-fold cross validation\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m best, results \u001b[39m=\u001b[39m k_fold_cross_validation(X_train, y_train, \u001b[39m9\u001b[39;49m, svm, parameters)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mRESULTS FOR POLY DEGREE=2 KERNEL\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBest parameter set found:\u001b[39m\u001b[39m\"\u001b[39m, best[\u001b[39m0\u001b[39m])\n",
-      "\u001b[1;32m/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb Cell 26\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m y_valid_test \u001b[39m=\u001b[39m y_folds[i]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m#The remaining ones create the validation training set (otherwise there is a conflict with the variable names)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m x_valid_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mvstack(np\u001b[39m.\u001b[39;49mdelete(x_folds, i, axis\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m y_valid_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdelete(y_folds, i, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mflatten()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/menegattig/sketchbook/python_notebooks/MachineLearning/Lab2/assignment_lab02.ipynb#X34sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m#Train the model on the training set\u001b[39;00m\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mdelete\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/lib/function_base.py:5126\u001b[0m, in \u001b[0;36mdelete\u001b[0;34m(arr, obj, axis)\u001b[0m\n\u001b[1;32m   5123\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[1;32m   5124\u001b[0m         \u001b[39mpass\u001b[39;00m\n\u001b[0;32m-> 5126\u001b[0m arr \u001b[39m=\u001b[39m asarray(arr)\n\u001b[1;32m   5127\u001b[0m ndim \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mndim\n\u001b[1;32m   5128\u001b[0m arrorder \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mF\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m arr\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mfnc \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (9,) + inhomogeneous part."
+      "RESULTS FOR POLY DEGREE=2 KERNEL\n",
+      "Best parameter set found: {'C': 1, 'gamma': 0.01}\n",
+      "Score with best parameter: 0.8919 \n",
+      "\n",
+      "All scores on the grid:\n",
+      "[({'C': 0.01, 'gamma': 0.01}, 0.7449), ({'C': 0.01, 'gamma': 0.1}, 0.7449), ({'C': 0.01, 'gamma': 1.0}, 0.7449), ({'C': 0.1, 'gamma': 0.01}, 0.8749), ({'C': 0.1, 'gamma': 0.1}, 0.8749), ({'C': 0.1, 'gamma': 1.0}, 0.8749), ({'C': 1, 'gamma': 0.01}, 0.8919), ({'C': 1, 'gamma': 0.1}, 0.8919), ({'C': 1, 'gamma': 1.0}, 0.8919)]\n"
      ]
     }
    ],
@@ -505,11 +497,10 @@
     "\n",
     "print(\"Best parameter set found:\", best[0])\n",
     "\n",
-    "print(\"Score with best parameter:\", best[1])\n",
+    "print(\"Score with best parameter:\", best[1], '\\n')\n",
     "\n",
-    "print(\"All scores on the grid:\", results)\n",
-    "\n",
-    "#Change how the x_valid_train is flattened "
+    "print(\"All scores on the grid:\")\n",
+    "print(results)"
    ]
   },
   {
@@ -523,30 +514,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULTS FOR POLY DEGREE=3 KERNEL\n",
+      "Best parameter set found: {'C': 1, 'gamma': 0.01}\n",
+      "Score with best parameter: 0.8941 \n",
+      "\n",
+      "All scores on the grid:\n",
+      "[({'C': 0.01, 'gamma': 0.01}, 0.7451), ({'C': 0.01, 'gamma': 0.1}, 0.7451), ({'C': 0.01, 'gamma': 1}, 0.7451), ({'C': 0.1, 'gamma': 0.01}, 0.8751), ({'C': 0.1, 'gamma': 0.1}, 0.8751), ({'C': 0.1, 'gamma': 1}, 0.8751), ({'C': 1, 'gamma': 0.01}, 0.8941), ({'C': 1, 'gamma': 0.1}, 0.8941), ({'C': 1, 'gamma': 1}, 0.8941)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters for poly with higher degree kernel\n",
     "parameters = {'C': [0.01, 0.1, 1],'gamma':[0.01,0.1, 1]}\n",
     "\n",
     "# Define an SVM with poly of higher degree kernel (without parameters)\n",
     "degree = 3\n",
-    "poly_svm = None # ADD YOUR CODE HERE (replace None)\n",
+    "poly_svm = SVC(kernel='poly', degree=degree)\n",
     "\n",
     "# Perform the K-fold cross validation\n",
-    "best, results = None # ADD YOUR CODE HERE (replace None)\n",
+    "best, results = k_fold_cross_validation(X_train, y_train, 9, svm, parameters)\n",
     "\n",
     "print (f\"RESULTS FOR POLY DEGREE={degree} KERNEL\")\n",
     "\n",
-    "print(\"Best parameter set found:\")\n",
-    "# ADD YOUR CODE HERE\n",
+    "print(\"Best parameter set found:\", best[0])\n",
     "\n",
-    "print(\"Score with best parameter:\")\n",
-    "# ADD YOUR CODE HERE\n",
-    "print()\n",
+    "print(\"Score with best parameter:\", best[1], '\\n')\n",
+    "\n",
     "print(\"All scores on the grid:\")\n",
-    "# ADD YOUR CODE HERE"
+    "print(results)"
    ]
   },
   {
@@ -560,29 +562,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULTS FOR rbf KERNEL\n",
+      "RESULTS FOR POLY DEGREE=3 KERNEL\n",
+      "Best parameter set found: {'C': 100, 'gamma': 0.001}\n",
+      "Score with best parameter: 0.898 \n",
+      "\n",
+      "All scores on the grid:\n",
+      "[({'C': 0.1, 'gamma': 0.001}, 0.875), ({'C': 0.1, 'gamma': 0.01}, 0.875), ({'C': 0.1, 'gamma': 0.1}, 0.875), ({'C': 0.1, 'gamma': 1}, 0.875), ({'C': 1, 'gamma': 0.001}, 0.893), ({'C': 1, 'gamma': 0.01}, 0.893), ({'C': 1, 'gamma': 0.1}, 0.893), ({'C': 1, 'gamma': 1}, 0.893), ({'C': 10, 'gamma': 0.001}, 0.896), ({'C': 10, 'gamma': 0.01}, 0.896), ({'C': 10, 'gamma': 0.1}, 0.896), ({'C': 10, 'gamma': 1}, 0.896), ({'C': 100, 'gamma': 0.001}, 0.898), ({'C': 100, 'gamma': 0.01}, 0.898), ({'C': 100, 'gamma': 0.1}, 0.898), ({'C': 100, 'gamma': 1}, 0.898)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters for rbf SVM\n",
     "parameters = {'C': [0.1, 1, 10, 100],'gamma':[0.001, 0.01, 0.1,1]}\n",
     "\n",
     "# Define an SVM with rbf kernel (without parameters)\n",
-    "rbf_svm = None # ADD YOUR CODE HERE (replace None)\n",
-    "\n",
+    "rbf_svm = SVC(kernel='rbf')\n",
     "# Perform the K-fold cross validation\n",
-    "best, results = None # ADD YOUR CODE HERE (replace None)\n",
+    "best, results = k_fold_cross_validation(X_train, y_train, 9, svm, parameters)\n",
     "\n",
     "print ('RESULTS FOR rbf KERNEL')\n",
     "\n",
-    "print(\"Best parameter set found:\")\n",
-    "# ADD YOUR CODE HERE\n",
     "\n",
-    "print(\"Score with best parameter:\")\n",
-    "# ADD YOUR CODE HERE\n",
-    "print()\n",
+    "print (f\"RESULTS FOR POLY DEGREE={degree} KERNEL\")\n",
+    "\n",
+    "print(\"Best parameter set found:\", best[0])\n",
+    "\n",
+    "print(\"Score with best parameter:\", best[1], '\\n')\n",
+    "\n",
     "print(\"All scores on the grid:\")\n",
-    "# ADD YOUR CODE HERE"
+    "print(results)"
    ]
   },
   {
@@ -616,12 +632,15 @@
    "outputs": [],
    "source": [
     "# Get training and test error for the best SVM model from CV\n",
-    "best_svm = None # USE YOUR OPTIMAL PARAMETERS HERE (replace None)\n",
+    "best_svm = SVC()\n",
     "\n",
     "# Run the svm model on the whole training set\n",
-    "\n",
+    "best_svm.fit(X_train, y_train)\n",
     "# Compute the errors\n",
     "# (error is 1 - svm.score)\n",
+    "\n",
+    "predictions = best_svm.predict(X_test)\n",
+    "\n",
     "training_error = None # ADD YOUR CODE (replace None)\n",
     "test_error = None # ADD YOUR CODE (replace None)\n",
     "\n",
