working mykmeans and scikit

--- a/Lab3/fogliacco_di_prova.ipynb
+++ b/Lab3/fogliacco_di_prova.ipynb
@@ -2,45 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.24825228 0.47517108 0.39435133]\n",
-      " [0.09835118 0.05097567 0.06881328]\n",
-      " [0.42553719 0.77152318 0.4670897 ]\n",
-      " [0.08618042 0.75927406 0.97827304]\n",
-      " [0.85319889 0.75921446 0.96556255]\n",
-      " [0.59704298 0.29996855 0.44687676]]\n",
-      "[1 5 5 3 2 2 5 5 1 4 5 2 4 2 2 3 2 4 5 4 5 0 3 2]\n",
-      "[[0.08984087 0.0770878  0.52883259]\n",
-      " [0.39294478 0.1589502  0.0906186 ]\n",
-      " [0.56407572 0.81461665 0.31386568]\n",
-      " [0.13637336 0.7593238  0.83239505]\n",
-      " [0.72773731 0.67314517 0.84978217]\n",
-      " [0.78506897 0.24609017 0.32285238]]\n"
+      "[[0.4662225  0.49109828 0.21715877]\n",
+      " [0.2216715  0.23228762 0.9741501 ]\n",
+      " [0.33401404 0.56849879 0.9874614 ]]\n",
+      "[[0.609326   0.28484167 0.28201189]\n",
+      " [0.16268935 0.273969   0.84441073]\n",
+      " [0.54608097 0.69409482 0.72467681]]\n",
+      "1.52421390729639\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "k = 6\n",
+    "k = 3\n",
     "\n",
     "points = np.random.random(size=(4*k,3))\n",
     "centers = np.random.random(size=(k,3))\n",
     "print(centers)\n",
     "\n",
     "dist = np.array([[np.linalg.norm(a-b) for b in centers] for a in points])\n",
-    "min_dist = np.array([a.argmin() for a in dist])\n",
-    "print(min_dist)\n",
+    "cluster = np.array([a.argmin() for a in dist])\n",
     "\n",
-    "clusters = [points[min_dist == i] for i in range(k)]\n",
-    "means = np.array([np.mean(cluster, axis=0) for cluster in clusters])\n",
-    "print(means)"
+    "means = np.array([np.mean(points[cluster == i], axis=0) for i in range(k)])\n",
+    "print(means)\n",
+    "\n",
+    "errors = np.sum([np.sum([np.linalg.norm(a-b)**2 for b in points[cluster == i]]) for a, i in zip(means, range(k))])\n",
+    "print(errors)"
    ]
   }
  ],
