--- a/Lab4/Menegatti_Giacomo_LAB04.ipynb
+++ b/Lab4/Menegatti_Giacomo_LAB04.ipynb
@@ -1053,6 +1053,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With only one hidden layer, the algorithm works and gives an accuracy similar to the sklearn method with around 200 steps. Instead, using multiple hidden layers the accuracy drops and to have good results the number of epochs needed is much bigger, and it still doesn't reach the accuracy of the sklearn method. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1075,8 +1082,6 @@
    ],
    "source": [
     "# Define the MLP object\n",
-    "\n",
-    "'''With only one hidden layer, the algorithm works and gives an accuracy similar to the sklearn method with around 200 steps. Instead, using multiple hidden layers the accuracy drops and the results make no sense unless the number of epochs is much bigger, and it still doesn't reach the accuracy of the sklearn method. '''\n",
     "\n",
     "hl_layers=[50, 40]  #Hidden layers\n",
     "layers = [x_train.shape[1]] + hl_layers + [len(np.unique(y_train))] #Adding the input and output layers\n",
@@ -1136,7 +1141,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ANSWER B.Q1:** Answer here"
+    "The **init** method creates the dicts containing the weights and the bias and initializes them, and defines the activation function for each layer (RELU for all layers except the last one).\n",
+    "The **one_hot** takes the labels array and creates 10 array containing 0 or 1 for each label\n",
+    "The **forward** method propagates the signal inside the network to obtain the predicted label\n",
+    "The **cost_function** calculates the cross entropy loss of the network\n",
+    "The **predict** method creates an array of predictions by calling forward\n"
    ]
   },
   {
