--- a/Lab4/Menegatti_Giacomo_LAB04.ipynb
+++ b/Lab4/Menegatti_Giacomo_LAB04.ipynb
@@ -912,7 +912,7 @@
     "            linear_cache = (prev, W, b)\n",
     "            \n",
     "            # Applying the activation function on linear hypothesis\n",
-    "            out, activation_cache = self.params[f\"activation{l}\"](z+b)\n",
+    "            out, activation_cache = self.params[f\"activation{l}\"] (z+b)\n",
     "            \n",
     "            # storing both the linear and activation cache\n",
     "            caches.append((linear_cache, activation_cache))\n",
@@ -1141,11 +1141,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **init** method creates the dicts containing the weights and the bias and initializes them, and defines the activation function for each layer (RELU for all layers except the last one).\n",
-    "The **one_hot** takes the labels array and creates 10 array containing 0 or 1 for each label\n",
-    "The **forward** method propagates the signal inside the network to obtain the predicted label\n",
-    "The **cost_function** calculates the cross entropy loss of the network\n",
-    "The **predict** method creates an array of predictions by calling forward\n"
+    "The **init** method creates the dicts containing the weights and the bias and initializes them, and defines the activation function for each layer (RELU for all layers except the last one). \n",
+    "\n",
+    "The **one_hot** takes the labels array and creates 10 array containing 0 or 1 for each label \n",
+    "\n",
+    "The **forward** method propagates the signal inside the network to obtain the predicted label by repeatedly taking the input values, multiplying by the weights, adding the bias and giving the results to the activation function, while storing the results in the caches list \n",
+    "\n",
+    "The **cost_function** calculates the cross entropy loss of the network \n",
+    "\n",
+    "The **one_layer_backward** method, given the loss derivative w.r.t the layer and the linear and activation cache, returns the derivative w.r.t the weights, bias and the previous layer, which then **backprop** uses to calculate iteratively the derivative of the loss w.r.t the weights and bias of each layer going from the last to the first \n",
+    "\n",
+    "The **update_parameters** method gets the derivatives that were calculated by the backpropo methos and updates the weights and the bias of each layer by adding the derivatives multiplied by the learning rate to avoid sudden changes \n",
+    "\n",
+    "The **train** method trains the network by iteratively predicting the labels, getting the loss and backpropagating the gradient to update the parameters of the network until the number of epochs is reached \n",
+    "\n",
+    "The **predict** method creates an array of predictions given the input list\n"
    ]
   },
   {
